# wicca

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/tools/: CMakeLists.txt
