# Copyright 2011-2012,2014,2017 Free Software Foundation, Inc.
#
# This file is part of Wicca project
#
########################################################################
########################################################################
# Setup dependencies
########################################################################

add_subdirectory(tools)